# spoon-starter

./: .env.example  README.md  neofs_agent_demo.py  pyproject.toml  requirements.txt  streaming_chatbot.py  x402_react_agent_demo.py
starter/: README.md  streaming_chatbot.py
tool_agent/: neo_demo.py  neo_toolcall_agent.py
