[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spoon-starter"
version = "0.1.0"
description = "Starter template for building agents with Spoon AI SDK"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  {name = "SpoonAI Team", email = "team@spoonai.com"},
]

dependencies = [
  "spoon-ai-sdk>=0.3.0",
  "spoon-toolkits>=0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/XSpoonAi/spoon-starter"
"Bug Tracker" = "https://github.com/XSpoonAi/spoon-starter/issues"

[project.optional-dependencies]
memory = [
  "spoon-ai-sdk[memory]>=0.0.1",
]

[tool.setuptools]
packages = []  # spoon-starter is a template project and does not contain installable packages